syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.chequer.sqlgate.grpc";
option java_outer_classname = "UserProto";
option objc_class_prefix = "RTG";

package user;

service UserService {

    rpc GetUser (User) returns (User) {
    }

    rpc SaveUser (User) returns (User) {
    }

    rpc UserStatus (stream Status) returns (User) {
    }

    rpc ListUserList (Empty) returns (stream User) {
    }
}

message Empty {

}

message User {
    int64 id = 1;
    string name = 2;
    int32 age = 3;
    string email = 4;

    Status status = 5;
}

message Status {
    int32 statusId = 1;
    int32 userId = 2;
    string message = 3;
}

message Query {
    repeated string message = 1;
}